// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`+ HeroComponent unit tests > should render a default text of there are no celebrities loaded 1`] = `
"<main data-v-0dada1a8="" role="main">
  <div data-v-0dada1a8="" class="main__header"><span data-v-0dada1a8="" class="main__header-title">Previous Rulings</span>
    <div data-v-0dada1a8="" class="main__header-select">
      <select-component-stub data-v-0dada1a8="" options="list,grid" default="grid" tabindex="0"></select-component-stub>
    </div>
  </div>
  <p data-v-0dada1a8="">There aren't enough celebrities... soon.</p>
</main>"
`;

exports[`+ HeroComponent unit tests > should render as expected 1`] = `
"<main data-v-0dada1a8="" role="main">
  <div data-v-0dada1a8="" class="main__header"><span data-v-0dada1a8="" class="main__header-title">Previous Rulings</span>
    <div data-v-0dada1a8="" class="main__header-select">
      <select-component-stub data-v-0dada1a8="" options="list,grid" default="grid" tabindex="0"></select-component-stub>
    </div>
  </div>
  <ol data-v-0dada1a8="" class="main__container">
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
    <card-component-stub data-v-0dada1a8="" celebrity="[object Object]" islayered="false"></card-component-stub>
  </ol>
</main>"
`;
